# Matrix

./: CMakeLists.txt  README.md  first.cpp  run.sh
include/: Matrix.hpp  doublecomp.hpp  floatcompar.hpp  matrix.hpp
src/: main.cpp  main2.cpp  main_double.cpp  main_int.cpp  main_ll.cpp
test/: CMakeLists.txt  test.cpp  test1.cpp  testing.sh
test/e2e/: test1.in  test10.in  test11.in  test12.in  test13.in  test14.in  test15.in  test16.in  test17.in  test18.in  test19.in  test2.in  test20.in  test21.in  test22.in  test23.in  test24.in  test25.in  test26.in  test27.in  test28.in  test29.in  test3.in  test4.in  test5.in  test6.in  test7.in  test8.in  test9.in
